--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-*
-{ font-family: "Helvetica", "Arial", "sans-serif"}
+* { 
+  font-family: "Helvetica", "Arial", "sans-serif";}
 
 body { padding: 0 30px 0 30px}
 
