--- a/style.css
+++ b/style.css
@@ -31,9 +31,8 @@ nav a:hover {
 
 }
 
-h3#header a{
-  text-decoration: none;
-  color: #868e96;
+#header a{
+  float:left;
 font-size: 30px}
 
 h3#header a:hover{
